[workspace]
members = [
    "solana-client",
    "utils/*"
]
exclude = ["playnet", "rust-analyzer"]

[workspace.dependencies]
Inflector = "0.11"
arrayref = "0.3"
assert_matches = "1"
async-trait = "0.1"
base64 = "0.13"
bincode = "1.3"
borsh = "0.10"
bs58 = "0.4"
bytemuck = "1"
chrono = "0.4"
clap = "3.1.18"
console = "0.15"
fluvio-wasm-timer = "0.2"
futures = "0.3"
humantime = "2"
js-sys = "0.3.65"
lazy_static = "1"
log = "0.4.17"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5"
reqwest = "0.11.9"
rustc_version = "0.4"
semver = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
solana-extra-wasm = { version = "2.1.9", path = "utils/solana-extra" }
solana-frozen-abi = "2.1.9"
solana-frozen-abi-macro = "2.1.9"
solana-sdk = "2.1.9"
thiserror = "1"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
wasm-bindgen-test = "0.3.38"
web-sys = "0.3.65"
