[package]
name = "solana-client-wasm"
version = "2.1.9" # mirror solana-sdk version
description = "Solana non-blocking WASM RPC client."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "wasm", "client", "rpc", "playground"]
readme = "README.md"

[features]
pubsub = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
js-sys = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-extra-wasm = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["MessageEvent", "WebSocket"], optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
