[package]
name = "solana-extra-wasm"
version = "2.1.9" # mirror solana-sdk version
description = "Solana WASM compatible utilities."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "playground", "wasm", "extra", "utils"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
Inflector = { workspace = true }
arrayref = { workspace = true }
assert_matches = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
console = { workspace = true }
fluvio-wasm-timer = { workspace = true }
humantime = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true } # only for nightly builds
num-derive = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-frozen-abi = { workspace = true }
solana-frozen-abi-macro = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }
